Add more links on index page

--- a/index.html
+++ b/index.html
@@ -22,57 +22,57 @@
             <img class="closing-x" id="closing-x" src="assets/close.svg" alt="Close the menu">
             <div class="nav-links">
                 <div class="nav-item-div">
-                    <h2 class="nav-item">Studio map</h2>
+                    <h2 class="nav-item"><a href="studiomap.html">Studio map</a></h2>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Resources</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item">Studios</p>
-                        <p class="dropdown-item">Coaches</p>
-                        <p class="dropdown-item">Performers</p>
-                        <p class="dropdown-item">Troupes and collectives</p>
-                        <p class="dropdown-item">Retreats</p>
-                        <p class="dropdown-item">Competitions</p>
-                        <p class="dropdown-item">Festivals</p>
-                        <p class="dropdown-item">Physio and flexy</p>
-                        <p class="dropdown-item">Photography and video</p>
-                        <p class="dropdown-item">Other resources</p>
-                        <p class="dropdown-item">See all</p>
+                        <p class="dropdown-item"><a href="studios.html">Studios</a></p>
+                        <p class="dropdown-item"><a href="coaches.html">Coaches</a></p>
+                        <p class="dropdown-item"><a href="performers.html">Performers</a></p>
+                        <p class="dropdown-item"><a href="collectives.html">Troupes and collectives</a></p>
+                        <p class="dropdown-item"><a href="retreats.html">Retreats</a></p>
+                        <p class="dropdown-item"><a href="competitions.html">Competitions</a></p>
+                        <p class="dropdown-item"><a href="festivals.html">Festivals</a></p>
+                        <p class="dropdown-item"><a href="health.html">Physio and flexy</a></p>
+                        <p class="dropdown-item"><a href="photography.html">Photography and video</a></p>
+                        <p class="dropdown-item"><a href="otherresources.html">Other resources</a></p>
+                        <p class="dropdown-item"><a href="allresources.html">See all</a></p>
                     </div>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Shops</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item">Clothing</p>
-                        <p class="dropdown-item">Heels</p>
-                        <p class="dropdown-item">Equipment</p>
+                        <p class="dropdown-item"><a href="clothing.html">Clothing</a></p>
+                        <p class="dropdown-item"><a href="heels.html">Heels</a></p>
+                        <p class="dropdown-item"><a href="equipment.html">Equipment</a></p>
                     </div>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item">Skills</h2>
                     <img class="nav-link-arrow" id="nav-link-arrow" src="assets/triangle-down.svg" alt="Expand">
                     <div class="dropdown-container" id="dropdown-container">
-                        <p class="dropdown-item">Hoop/lyra</p>
-                        <p class="dropdown-item">Silks</p>
-                        <p class="dropdown-item">Trapeze</p>
-                        <p class="dropdown-item">Hammock/sling</p>
-                        <p class="dropdown-item">Pole</p>
-                        <p class="dropdown-item">Straps + rope</p>
-                        <p class="dropdown-item">Others</p>
-                        <p class="dropdown-item">See all</p>
+                        <p class="dropdown-item"><a href="hoop.html">Hoop/lyra</a></p>
+                        <p class="dropdown-item"><a href="silks.html">Silks</a></p>
+                        <p class="dropdown-item"><a href="trapeze.html">Trapeze</a></p>
+                        <p class="dropdown-item"><a href="hammock.html">Hammock/sling</a></p>
+                        <p class="dropdown-item"><a href="pole.html">Pole</a></p>
+                        <p class="dropdown-item"><a href="straps.html">Straps + rope</a></p>
+                        <p class="dropdown-item"><a href="otherskills.html">Others</a></p>
+                        <p class="dropdown-item"><a href="allskills.html">See all</a></p>
                     </div>
                 </div>
                 <div class="nav-item-div">
-                    <h2 class="nav-item">What's on</h2>
+                    <h2 class="nav-item"><a href="events.html">What's on</a></h2>
                 </div>
                 <div class="nav-item-div">
                     <h2 class="nav-item"><a href="about.html">About</a></h2>
                 </div>
             </div>
             <div class="nav-input">
-                <button class="sign-in-btn">Sign in</button>
+                <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
                 <input type="search" class="search-bar">
             </div>
         </nav>
@@ -83,7 +83,7 @@
 
         <!-- Scroll cards category 1 -->
 
-        <h1 class="cards-category">What's on</h1>
+        <h1 class="cards-category"><a href="events.html">What's on</a></h1>
         <div class="scroll-cards">
 
             <div class="card">
@@ -171,7 +171,7 @@
 
         <!-- Scroll cards category 2 -->
 
-        <h1 class="cards-category">Find a studio</h1>
+        <h1 class="cards-category"><a href="studios.html">Find a studio</a></h1>
         <div class="scroll-cards">
 
             <div class="card">
@@ -259,7 +259,7 @@
 
         <!-- Scroll cards category 3 -->
 
-        <h1 class="cards-category">Discover pole & aerial wear</h1>
+        <h1 class="cards-category"><a href="clothing.html">Discover pole & aerial wear</a></h1>
         <div class="scroll-cards">
 
             <div class="card">
@@ -347,10 +347,10 @@
 
         <!-- More scroll cards categories to add below -->
 
-        <h1 class="cards-category">Studios around the world</h1>
+        <h1 class="cards-category"><a href="studiomap.html">Studios around the world</a></h1>
         <div class="map-card-container">
             <div class="map-card">
-                <img class="item-img" src="assets/placeholder.jpg">
+                <a href="studiomap.html"><img class="item-img" src="assets/placeholder.jpg"></a>
             </div>
         </div>
 
@@ -360,7 +360,7 @@
         <div class="footer-links-group">
             <p class="footer-link"><a href="#header">Home</a></p>
             <p class="footer-link"><a href="about.html">About</a></p>
-            <p class="footer-link">Sign in</p>
+            <p class="footer-link"><a href="signin.html">Sign in</a></p>
         </div>
         <a href="#header"><img class="arrow-up" src="assets/chevron-up.svg" alt="Back to the top"></a>
     </footer>
