--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Aerial Arts Hub</title>
-    <link rel="stylesheet" href="styles.css"></link>
+    <link rel="stylesheet" href="styles.css">
+    </link>
 </head>
 
 <body>
@@ -166,7 +167,11 @@
                 </div>
             </div>
 
-            <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+            <div class="arrow-see-all-container">
+                <a href="events.html">
+                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+                </a>
+            </div>
         </div>
 
         <!-- Scroll cards category 2 -->
@@ -254,7 +259,11 @@
                 </div>
             </div>
 
-            <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+            <div class="arrow-see-all-container">
+                <a href="studios.html">
+                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+                </a>
+            </div>
         </div>
 
         <!-- Scroll cards category 3 -->
@@ -342,7 +351,243 @@
                 </div>
             </div>
 
-            <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+            <div class="arrow-see-all-container">
+                <a href="clothing.html">
+                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+                </a>
+            </div>
+        </div>
+
+        <!-- Scroll cards category 4 -->
+
+        <h1 class="cards-category"><a href="allskills.html">The skills encyclopedia</a></h1>
+        <div class="scroll-cards">
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of skill</h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Apparatus</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of skill</h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Apparatus</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of skill</h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Apparatus</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of skill</h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Apparatus</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name">Name of skill</h2>
+                        <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                    </div>
+                    <p class="item-text">Apparatus</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="arrow-see-all-container">
+                <a href="allskills.html">
+                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+                </a>
+            </div>
+        </div>
+
+        <!-- Scroll cards category 5 -->
+
+        <h1 class="cards-category"><a href="allresources.html">Discover more resources</a></h1>
+        <div class="scroll-cards">
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="coaches.html">Find a coach</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">Near you or online</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="performers.html">Discover performers</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">Around the world</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="collectives.html">Explore collectives</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">Around the world</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="retreats.html">Find a retreat</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">Anywhere in the world</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="competitions.html">Join a competition</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">In your area</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="festivals.html">Find festivals</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">Around the world</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="health.html">Find a physio</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">Near you or online</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="item-img" src="assets/placeholder.jpg" alt="Item image">
+                <div class="card-info">
+                    <div class="name-and-icon">
+                        <h2 class="item-name"><a href="photography.html">Find a photographer</a></h2>
+                        <div class="heart-icon"></div>
+                    </div>
+                    <p class="item-text">In your area</p>
+                    <div class="item-tags-group">
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                        <button class="item-tag">Tag</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="arrow-see-all-container">
+                <a href="allresources.html">
+                    <img class="arrow-see-all" src="assets/chevron-right.svg" alt="See all">
+                </a>
+            </div>
         </div>
 
         <!-- More scroll cards categories to add below -->
