Finish design for sign-in and register pages

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <input type="search" class="search-bar">
+                <input type="search" class="search-bar" placeholder="Search...">
             </div>
         </nav>
 
