--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <input type="search" class="search-bar">
+                <input type="search" class="search-bar" placeholder="Search...">
             </div>
         </nav>
 
@@ -589,8 +589,6 @@
                 </a>
             </div>
         </div>
-
-        <!-- More scroll cards categories to add below -->
 
         <h1 class="cards-category"><a href="studiomap.html">Studios around the world</a></h1>
         <div class="map-card-container">
