Set up studio map + events pages, refine search

--- a/about.html
+++ b/about.html
@@ -79,20 +79,24 @@
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <input type="search" class="search-bar" placeholder="Search...">
+                <div class="search-items">
+                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon">
+                </div>
             </div>
         </nav>
 
     </header>
 
-    <main id="main">
+    <main id="main" class="main-left-margin">
         <img class="about-item-img" src="assets/placeholder.jpg" alt="About page featured image">
         <div class="about-text">
             <p class="about-p underlined">About</p>
             <h2 class="about-h2">The Aerial Arts Hub</h2>
             <p class="about-p">The Aerial Arts Hub is a platform for the aerial and pole community
                 to discover studios, coaches, performers, brands, and other useful resources all over the world.
-                We aim to be up-to-date, inclusive, accessible, and always free!
+                It was created with the aim to be up-to-date, inclusive, accessible, and completely free.
+            <p class="about-p">This platform is a project by self-taught newbie developer and hobby aerialist Yaiza Canopoli.</p>
             </p>
             <h2 class="about-h2">Follow our journey</h2>
             <p class="about-p">The Aerial Arts Hub is a passion project of amateur aerialist and self-taught
