--- a/events.html
+++ b/events.html
@@ -78,13 +78,101 @@
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <input type="search" class="search-bar" placeholder="Search...">
+                <div class="search-items">
+                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon">
+                </div>
             </div>
         </nav>
 
     </header>
 
-    <main id="main"></main>
+    <main id="main events-main" class="events-main">
+        <div class="events-top">
+            <h1 class="events-h1">What's on</h1>
+            <div class="events-search-items">
+                <input type="search" class="search-bar" id="events-search-bar" placeholder="Search...">
+                <img src="assets/magnify.svg" class="search-icon" id="events-search-icon">
+            </div>
+        </div>
+        <div class="events-container" id="events-container">
+            <h1>Featured events</h1>
+            <div class="events-lineup">
+                <div class="event-item">
+                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="event-info-box">
+                        <div class="event-title-icon">
+                            <h3 class="event-title">Name of event</h3>
+                            <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        </div>
+                        <p class="event-info-text">Date and time</p>
+                        <p class="event-info-text">Location</p>
+                    </div>
+                </div>
+
+                <div class="event-item">
+                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="event-info-box">
+                        <div class="event-title-icon">
+                            <h3 class="event-title">Name of event</h3>
+                            <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        </div>
+                        <p class="event-info-text">Date and time</p>
+                        <p class="event-info-text">Location</p>
+                    </div>
+                </div>
+
+                <div class="event-item">
+                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="event-info-box">
+                        <div class="event-title-icon">
+                            <h3 class="event-title">Name of event</h3>
+                            <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        </div>
+                        <p class="event-info-text">Date and time</p>
+                        <p class="event-info-text">Location</p>
+                    </div>
+                </div>
+
+                <div class="event-item">
+                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="event-info-box">
+                        <div class="event-title-icon">
+                            <h3 class="event-title">Name of event</h3>
+                            <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        </div>
+                        <p class="event-info-text">Date and time</p>
+                        <p class="event-info-text">Location</p>
+                    </div>
+                </div>
+
+                <div class="event-item">
+                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="event-info-box">
+                        <div class="event-title-icon">
+                            <h3 class="event-title">Name of event</h3>
+                            <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        </div>
+                        <p class="event-info-text">Date and time</p>
+                        <p class="event-info-text">Location</p>
+                    </div>
+                </div>
+
+                <div class="event-item">
+                    <img class="event-item-img" src="assets/placeholder.jpg" alt="Placeholder for event image">
+                    <div class="event-info-box">
+                        <div class="event-title-icon">
+                            <h3 class="event-title">Name of event</h3>
+                            <img class="heart-icon" id="heart-icon" src="assets/heart-outline.svg" alt="Like">
+                        </div>
+                        <p class="event-info-text">Date and time</p>
+                        <p class="event-info-text">Location</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-links-group">
