--- a/studiomap.html
+++ b/studiomap.html
@@ -78,13 +78,40 @@
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <input type="search" class="search-bar" placeholder="Search...">
+                <div class="search-items">
+                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon">
+                </div>
             </div>
         </nav>
 
     </header>
 
-    <main id="main"></main>
+    <main id="main map-main" class="map-main">
+        <h1 class="map-h1">Explore the studio map</h1>
+        <div class="map-search-items">
+            <input type="search" class="search-bar" id="map-search-bar" placeholder="Search...">
+            <img src="assets/magnify.svg" class="search-icon" id="map-search-icon">
+        </div>
+        <img class="map-placeholder-img" src="assets/placeholder.jpg" alt="Placeholder image for embedded map">
+        <div class="found-studios-container" id="found-studios-container">
+            <div class="blue-background" id="blue-background">
+                <h1 class="popular-locations-header">Popular locations</h1>
+                <div class="popular-location-item">
+                    <h2>City, country name</h2>
+                    <h3 class="popular-location-number">X studios</h3>
+                </div>
+                <div class="popular-location-item">
+                    <h2>City, country name</h2>
+                    <h3 class="popular-location-number">X studios</h3>
+                </div>
+                <div class="popular-location-item">
+                    <h2>City, country name</h2>
+                    <h3 class="popular-location-number">X studios</h3>
+                </div>
+            </div>
+        </div>
+    </main>
 
     <footer>
         <div class="footer-links-group">
