--- a/allresources.html
+++ b/allresources.html
@@ -78,13 +78,16 @@
             </div>
             <div class="nav-input">
                 <button class="sign-in-btn"><a href="signin.html">Sign in</a></button>
-                <input type="search" class="search-bar" placeholder="Search...">
+                <div class="search-items">
+                    <input type="search" class="search-bar" id="nav-search-bar" placeholder="Search...">
+                    <img src="assets/magnify.svg" class="search-icon" id="search-icon">
+                </div>
             </div>
         </nav>
 
     </header>
 
-    <main id="main">
+    <main id="main" class="main-left-margin">
 
         <!-- Scroll cards category 1 -->
 
